# canchat

./: .dockerignore  .gitignore  Dockerfile  README.md  azure-pipelines.yml
.github/: FUNDING.yml
front/: index.html
front/chat/: chat.js  index.html
server/: CMakeLists.txt  Dockerfile  README.md
server/src/: App.cpp  AppComponent.hpp
server/src/controller/: FileController.hpp  RoomsController.hpp  StaticController.hpp  StatisticsController.hpp
server/src/dto/: Config.hpp  DTOs.cpp  DTOs.hpp
server/src/rooms/: File.cpp  File.hpp  Lobby.cpp  Lobby.hpp  Peer.cpp  Peer.hpp  Room.cpp  Room.hpp
server/src/utils/: Nickname.cpp  Nickname.hpp  Statistics.cpp  Statistics.hpp
server/test/: WSTest.cpp  WSTest.hpp  tests.cpp
server/utility/: install-oatpp-modules.sh
utility/: install-oatpp-modules.sh
